[project]
name = "comfyui-stableaudiosampler"
description = "Nodes: StableAudioSampler. Wraps the new Stable Audio Open Model in the sampler that dropped Jun 5th. See Github for Features"
version = "1.0.0"
license = "LICENSE"
dependencies = ["stable-audio-tools"]

[project.urls]
Repository = "https://github.com/lks-ai/ComfyUI-StableAudioSampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-StableAudioSampler"
Icon = ""
